--- a/public/asset/account.css
+++ b/public/asset/account.css
@@ -24,59 +24,20 @@ h6 span {
     text-transform: uppercase;
     font-weight: 700;
 }
-.section {
-    position: relative;
-    width: 100%;
-    display: block;
-}
-.full-height {
-    height: 100vh;
-}
-[type="checkbox"]:checked,
-[type="checkbox"]:not(:checked) {
-    position: absolute;
-    left: -9999px;
-}
-.checkbox:checked + label,
-.checkbox:not(:checked) + label {
-    position: relative;
-    display: block;
-    text-align: center;
-    width: 60px;
-    height: 16px;
-    border-radius: 8px;
-    padding: 0;
-    margin: 10px auto;
-    cursor: pointer;
-    background-color: #80ed99;
-}
-.checkbox:checked + label:before,
-.checkbox:not(:checked) + label:before {
-    position: absolute;
-    display: block;
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    color: #fff;
-    background-color: #414056;
-    content: ">";
-    z-index: 20;
-    top: -10px;
-    left: -10px;
-    line-height: 36px;
-    text-align: center;
-    font-size: 24px;
-    transition: all 0.5s ease;
-}
-.checkbox:checked + label:before {
-    transform: translateX(44px) rotate(180deg);
-}
-
 .card-3d-wrap {
     position: relative;
     width: 440px;
     max-width: 100%;
-    height: 400px;
+    height: 380px;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    perspective: 800px;
+}
+.card-3d-wrap-register {
+    position: relative;
+    width: 480px;
+    max-width: 100%;
+    height: 480px;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
     perspective: 800px;
@@ -111,12 +72,6 @@ h6 span {
     -o-backface-visibility: hidden;
     backface-visibility: hidden;
 }
-.card-back {
-    transform: rotateY(180deg);
-}
-.checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
-    transform: rotateY(180deg);
-}
 .center-wrap {
     position: absolute;
     width: 100%;
@@ -142,7 +97,6 @@ h6 span {
     width: 100%;
     font-weight: 500;
     border-radius: 4px;
-    font-size: 14px;
     line-height: 22px;
     letter-spacing: 0.5px;
     outline: none;
